--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,20 @@
 
         <service android:name=".Service.ServicioTrack" />
 
+
+        <receiver
+            android:name=".Widget.Widget"
+            android:label="GPS Tracker APP">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/appwidget_provider" />
+        </receiver>
+
+
     </application>
 
 </manifest>
